Fix: Atualização do estilo do link do logo para melhorar a visibilidade e a identidade visual do site.

--- a/css/style.css
+++ b/css/style.css
@@ -101,6 +101,11 @@ a:visited {
   border-radius: 50px;
 }
 
+.logo-link{
+  font-size: 1.2rem;
+  font-weight: bold;
+}
+
 /* ====================== LAYOUT PRINCIPAL ====================== */
 
 .principal {
